@@ -1,3 +1,8 @@
+2002-05-06  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* config/os/irix/irix5.2/bits/os_defines.h (_SGI_SOURCE,
+	__EXTENSIONS__): Ensure they are always defined.
+
 2002-05-06  Phil Edwards  <pme@gcc.gnu.org>
 
 	* docs/html/documentation.html:  Fix broken link.
